# flappy_bird_bevy

./: Cargo.toml
.cargo/: config.toml
assets/source/: flappy.aseprite
src/: main.rs
